--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #010409;
+  background-color: #23272a;
   color: #333;
 }
 
 nav {
-  background-color: #333;
+  background-color: ##f28b58;
   padding: 10px;
   text-align: center;
 }
