--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ main {
   display: inline-block;
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: #0077cc;
+  background-color: #d67d51;
   color: white;
   text-decoration: none;
   border-radius: 4px;
